# transmute

./: .gitignore  Cargo.toml  README.md  ast.xml  build-stdlib.sh  clean.sh  cov.sh  gen-graphs.sh  gen-html.sh  perimeter.ll  setenv  spec.md  structs_type_parameters  test-bin.sh  test-gc.sh  test.sh
ast/: Cargo.toml
ast/src/: annotation.rs  ast_print.rs  expression.rs  identifier.rs  identifier_ref.rs  lexer.rs  lib.rs  literal.rs  operators.rs  parser.rs  pretty_print.rs  statement.rs
ast/src/snapshots/: transmute_ast__ast_print__tests__arrays_bounds.snap  transmute_ast__ast_print__tests__arrays_if.snap  transmute_ast__ast_print__tests__arrays_nested.snap  transmute_ast__ast_print__tests__arrays_of_structs.snap  transmute_ast__ast_print__tests__arrays_simple.snap  transmute_ast__ast_print__tests__fibo_iter.snap  transmute_ast__ast_print__tests__fibo_rec.snap  transmute_ast__ast_print__tests__gc.snap  transmute_ast__ast_print__tests__inner_function.snap  transmute_ast__ast_print__tests__perimeter.snap  transmute_ast__ast_print__tests__perimeter_lit_struct.snap  transmute_ast__ast_print__tests__perimeter_var_struct.snap  transmute_ast__ast_print__tests__print.snap  transmute_ast__ast_print__tests__sibling_function.snap  transmute_ast__ast_print__tests__string.snap  transmute_ast__ast_print__tests__structs_anon.snap  transmute_ast__ast_print__tests__structs_fn.snap  transmute_ast__ast_print__tests__structs_inner.snap  transmute_ast__ast_print__tests__structs_nested.snap  transmute_ast__ast_print__tests__structs_of_arrays.snap  transmute_ast__ast_print__tests__structs_simple.snap  transmute_ast__ast_print__tests__structs_type_parameters.snap  transmute_ast__ast_print__tests__void_fn.snap  transmute_ast__lexer__tests__at.snap  transmute_ast__lexer__tests__bad.snap  transmute_ast__lexer__tests__colon.snap  transmute_ast__lexer__tests__comment.snap  transmute_ast__lexer__tests__eof.snap  transmute_ast__lexer__tests__identifier.snap  transmute_ast__lexer__tests__identifier_space.snap  transmute_ast__lexer__tests__identifier_with_keyword_prefix.snap  transmute_ast__lexer__tests__keyword_a.snap  transmute_ast__lexer__tests__keyword_annotation.snap  transmute_ast__lexer__tests__keyword_else.snap  transmute_ast__lexer__tests__keyword_false.snap  transmute_ast__lexer__tests__keyword_if.snap  transmute_ast__lexer__tests__keyword_let.snap  transmute_ast__lexer__tests__keyword_namespace.snap  transmute_ast__lexer__tests__keyword_ret.snap  transmute_ast__lexer__tests__keyword_struct.snap  (+226 more)
ast/test-resources/: root.tm
ast/test-resources/root/: child.tm
codegen/c/: Cargo.toml  Makefile  main  main.c  test.c
codegen/c/src/: lib.rs
compiler/: Cargo.toml
compiler/src/: cli.rs  gc-functions.tm  lib.rs  main.rs
compiler/tests/: arrays_bounds.rs  arrays_if.rs  arrays_nested.rs  arrays_of_structs.rs  arrays_simple.rs  common.rs  fibo_iter.rs  fibo_rec.rs  fn_call_on_struct.rs  fn_call_on_val.rs  gc_array_of_arrays.rs  gc_array_of_numbers.rs  gc_array_of_structs.rs  gc_struct_of_arrays.rs  gc_struct_of_numbers.rs  gc_struct_of_structs.rs  inner_function.rs  perimeter.rs  perimeter_lit_struct.rs  perimeter_var_struct.rs  print.rs  sibling_function.rs  simple_struct.rs  string.rs  struct_simple.rs  structs_anon.rs  structs_fn.rs  structs_inner.rs  structs_nested.rs  structs_of_arrays.rs  structs_simple.rs  ugcs.rs  void_fn.rs
compiler/tests/examples/: gc_array_of_arrays.tm  gc_array_of_numbers.tm  gc_array_of_structs.tm  gc_struct_of_arrays.tm  gc_struct_of_numbers.tm  gc_struct_of_structs.tm
compiler/tests/snapshots/: arrays_bounds__arrays_bounds.snap  arrays_if__arrays_if.snap  arrays_nested__arrays_nested.snap  arrays_of_structs__arrays_of_structs.snap  arrays_simple__arrays_simple.snap  fibo_iter__fibo_iter.snap  fibo_rec__fibo_rec.snap  fn_call_on_struct__fn_call_on_struct.snap  fn_call_on_val__fn_call_on_val.snap  gc_array_of_arrays__gc_array_of_arrays.snap  gc_array_of_numbers__gc_array_of_numbers.snap  gc_array_of_structs__gc_array_of_structs.snap  gc_struct_of_arrays__gc_struct_of_arrays.snap  gc_struct_of_numbers__gc_struct_of_numbers.snap  gc_struct_of_structs__gc_struct_of_structs.snap  inner_function__inner_function.snap  perimeter__perimeter.snap  perimeter_lit_struct__perimeter_lit_struct.snap  perimeter_var_struct__perimeter_var_struct.snap  print__print.snap  sibling_function__sibling_function.snap  simple_struct__simple_struct.snap  string__string.snap  struct_simple__struct_simple.snap  structs_anon__structs_anon.snap  structs_fn__structs_fn.snap  structs_inner__structs_inner.snap  structs_nested__structs_nested.snap  structs_of_arrays__structs_of_arrays.snap  structs_simple__structs_simple.snap  ugcs__ufcs.snap  void_fn__void_fn.snap
hir/: Cargo.toml
hir/src/: bound.rs  exit_points.rs  expression.rs  hir_print.rs  identifier.rs  identifier_ref.rs  lib.rs  literal.rs  natives.rs  nodes.rs  output.rs  statement.rs  symbol.rs  typed.rs
hir/src/output/: html.rs  xml.rs
hir/src/passes/: exit_points_resolver.rs  implicit_ret_converter.rs  operators_converter.rs  resolver.rs
hir/src/snapshots/: transmute_hir__hir_print__tests__arrays_bounds.snap  transmute_hir__hir_print__tests__arrays_if.snap  transmute_hir__hir_print__tests__arrays_nested.snap  transmute_hir__hir_print__tests__arrays_of_structs.snap  transmute_hir__hir_print__tests__arrays_simple.snap  transmute_hir__hir_print__tests__fibo_iter.snap  transmute_hir__hir_print__tests__fibo_rec.snap  transmute_hir__hir_print__tests__gc.snap  transmute_hir__hir_print__tests__inner_function.snap  transmute_hir__hir_print__tests__perimeter.snap  transmute_hir__hir_print__tests__perimeter_lit_struct.snap  (+13 more)
llvm/: Cargo.toml
llvm/src/: lib.rs  mangling.rs  types.rs
nst/: Cargo.toml
nst/src/: builder.rs  exit_points_resolver.rs  implicit_ret_converter.rs  lib.rs  nodes.rs  pretty_print.rs
rt/rust/: Cargo.toml  build.rs  build.sh  llvm.c  llvm.h  main.c  mainrt.c  print.c  println.c  support.c
rt/rust/src/: gc.rs  (+7 more)
stdlib/: Cargo.toml  build.rs  cbindgen.sh  cbindgen.toml
stdlib/src/: gc.rs  stdlib.rs  stdlib.tm
(+1194 files in other folders)
