[package]
name = "transmute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
clap = { version = "4.5.8", features = ["derive"] }
xml-rs = "0.8.19"

[dev-dependencies]
insta = "1.34.0"
