[workspace]
resolver = "2"
members = [
    "core",
    "ast",
    "hir",
    "mir",
    "interpreter",
    "rt/c",
    "runtime",
    "llvm",
    "compiler"]

exclude = [
    "rt/rust",
    "rt/rust-c",
    "rt/rust-c-macros",
    "stdlib-macros",
    "stdlib"]

default-members = ["compiler", "interpreter"]