[package]
name = "transmute-ast"
version = "0.1.0"
edition = "2021"

[dependencies]
transmute-core = {path = "../core" }

[dev-dependencies]
insta = "1.34.0"

[features]
#default = ["debug-expected-token"]

allow-any-root-kind = []
# if enabled, prints the position where the expected token was put in the list
debug-expected-token = []

