[package]
name = "transmute-ast"
version = "0.1.0"
edition = "2021"

[dependencies]
transmute-core = {path = "../core" }
bimap = "0.6.3"

[dev-dependencies]
insta = "1.34.0"

[features]
#default = ["debug-expected-token"]

allow-any-root-kind = []
# if enabled, prints the position where the expected token was put in the list
debug-expected-token = []

print_generated_at_in_diagnostic_debug = ["transmute-core/print_generated_at_in_diagnostic_debug"]