[package]
name = "tmc"
version = "0.1.0"
edition = "2021"

[dependencies]
transmute-ast = { path = "../ast" }
transmute-hir = { path = "../hir" }
transmute-mir = { path = "../mir" }
transmute-crt = { path = "../rt/c", optional = true }
transmute-runtime = { path = "../runtime", optional = true }
transmute-llvm = { path = "../llvm" }
clap = { version = "4.5.8", features = ["derive"] }

[dev-dependencies]
insta = "1.34.0"
test_dir = "0.2.0"
paste = "1.0.15"
transmute-runtime = { path = "../runtime", features = ["gc-test", "gc-stable-logs", "gc-functions"] }
transmute-crt = { path = "../rt/c", features = ["gc-test", "gc-logs"] }
transmute-llvm = { path = "../llvm", features = ["gc-aggressive", "gc-functions"] }
transmute-hir = { path = "../hir", features = ["gc-functions"] }

[features]
default = ["runtime"]
gc-logs = ["transmute-crt/gc-logs", "transmute-runtime/gc-logs"]
gc-stable-logs = ["transmute-crt/gc-logs", "transmute-runtime/gc-stable-logs"]
gc-aggressive = ["transmute-llvm/gc-aggressive"]
gc-functions = ["transmute-hir/gc-functions", "transmute-llvm/gc-functions", "transmute-runtime/gc-functions"]

# Compile with rt/c
rt-c = ["dep:transmute-crt", "transmute-llvm/rt-c"]
# Compile with runtime
runtime = ["dep:transmute-runtime", "transmute-llvm/runtime"]