[package]
name = "tmc"
version = "0.1.0"
edition = "2021"

[dependencies]
transmute-ast = { path = "../ast" }
transmute-hir = { path = "../hir" }
transmute-mir = { path = "../mir" }
transmute-runtime = { path = "../runtime" }
transmute-llvm = { path = "../llvm" }
clap = { version = "4.5.8", features = ["derive"] }

[dev-dependencies]
insta = "1.34.0"
test_dir = "0.2.0"
paste = "1.0.15"
transmute-runtime = { path = "../runtime", features = ["gc-test", "gc-logs-stable", "gc-functions"] }
transmute-llvm = { path = "../llvm", features = ["gc-aggressive", "gc-functions"] }
transmute-hir = { path = "../hir", features = ["gc-functions"] }

[features]
default = []
gc-test = ["transmute-runtime/gc-test"]
gc-logs = ["transmute-runtime/gc-logs"]
gc-logs-stable = ["transmute-runtime/gc-logs-stable"]
gc-aggressive = ["transmute-llvm/gc-aggressive"]
gc-functions = ["transmute-hir/gc-functions", "transmute-llvm/gc-functions", "transmute-runtime/gc-functions"]
