[package]
name = "transmute-hir"
version = "0.1.0"
edition = "2021"

[dependencies]
transmute-core = { path = "../core" }
transmute-nst = { path = "../nst" }
bimap = "0.6.3"

[dev-dependencies]
insta = "1.34.0"
transmute-ast = { path = "../ast", features = ["allow-any-root-kind"] }
transmute-nst = { path = "../nst" }
transmute-core = { path = "../core", features = ["backtraces"] }

[features]
print_generated_at_in_diagnostic_debug = ["transmute-nst/print_generated_at_in_diagnostic_debug"]