[package]
name = "transmute-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
transmute-core = {path = "../core" }
transmute-hir = {path = "../hir" }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }

[dev-dependencies]
transmute-ast = {path = "../ast" }
insta = "1.34.0"
paste = "1.0.15"
