[package]
name = "transmute-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
transmute-core = {path = "../core" }
transmute-mir = {path = "../mir" }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }

[dev-dependencies]
transmute-ast = {path = "../ast" }
transmute-hir = {path = "../hir" }
insta = "1.34.0"
paste = "1.0.15"

[features]
default = []

# Execute GC after each assignment
gc-aggressive = []
# Provides gc related functions to transmute source code
gc-functions = ["transmute-hir/gc-functions"]

# Compile with rt/c
rt-c = []
# Compile with runtime
runtime = []

