[package]
name = "transmute-stdlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
transmute-stdlib-macros = { path = "../stdlib-macros" }

[build-dependencies]
cbindgen = { version = "0.27.0", optional = true }

[features]
default = ["test-wrapper"]
test-wrapper = ["dep:cbindgen"]