[package]
name = "transmute-codegen-c"
version = "0.1.0"
edition = "2024"

[dependencies]
transmute-codegen = { path = ".." }
transmute-core = { path = "../../core" }
transmute-mir = { path = "../../mir" }

[dev-dependencies]
transmute-ast = {path = "../../ast" }
transmute-nst = {path = "../../nst" }
transmute-hir = {path = "../../hir" }
insta = "1.34.0"
#paste = "1.0.15"

[features]
default = []

# Execute GC after each assignment
gc-aggressive = []
