[package]
name = "transmute-rustrt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }

[build-dependencies]
cbindgen = { version = "0.27.0", optional = true }

[features]
test-wrapper = ["dep:cbindgen"]
